--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta
+			name="viewport"
+			content=" width=device-width, initial-scale=1.0,shrink-to-fit=no maximum-scale=1.0, minimum-scale=1.0,user-scalable=no, viewport-fit=cover"
+		/>
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
