--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
         <meta
-			name="viewport"
-			content=" width=device-width, initial-scale=1.0,shrink-to-fit=no maximum-scale=1.0, minimum-scale=1.0,user-scalable=no, viewport-fit=cover"
-		/>
+            name="viewport"
+            content=" width=device-width, initial-scale=1.0,shrink-to-fit=no maximum-scale=1.0, minimum-scale=1.0,user-scalable=no, viewport-fit=cover"
+        />
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
@@ -57,6 +57,11 @@
                 live: true, // default
             });
             wow.init();
+            window.onload = function() {
+                setTimeout(()=>{
+                    window.scrollTo(0, 0);
+                },300)
+            };
         </script>
     </body>
 </html>
